Closed Bug 204647 Opened 23 years ago Closed 23 years ago

cannot build mac nullplugin when using --disable-oji

Categories

(Core Graveyard :: Plug-ins, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.4final

People

(Reporter: netscape, Assigned: sfraser_bugs)

Details

Attachments

(1 file, 1 obsolete file)

The build fails on the mac nullplugin when using --disable-oji.
Attached patch v1.0 (obsolete) — Splinter Review
Attachment #122600 - Flags: superreview?(sfraser)
Attachment #122600 - Flags: review?(peterl)
Comment on attachment 122600 [details] [diff] [review] v1.0 >+#ifdef OJI > if( navMinorVers >= NPVERS_HAS_LIVECONNECT ) > { > pluginFuncs->javaClass = (JRIGlobalRef) Private_GetJavaClass(); > } >+#endif Probably want to have an #else that sets pluginFuncs->javaClass to null here.
Attachment #122600 - Flags: superreview?(sfraser) → superreview+
Attached patch v1.1Splinter Review
Attachment #122600 - Attachment is obsolete: true
Attachment #122600 - Flags: review?(peterl)
Comment on attachment 122609 [details] [diff] [review] v1.1 Transferring sr.
Attachment #122609 - Flags: superreview+
Attachment #122609 - Flags: review?(peterl)
Attachment #122609 - Flags: review?(peterl) → review+
Attachment #122609 - Flags: approval1.4?
Comment on attachment 122609 [details] [diff] [review] v1.1 a=asa (on behalf of drivers) for checkin to 1.4.
Attachment #122609 - Flags: approval1.4? → approval1.4+
Patch has been checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.4final
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: