Fixing --disable-oji mac bustage. Bug #204647 r=peterl sr=sfraser a=asa